--- a/Transformer Class/TransformerCNN_Masks.ipynb
+++ b/Transformer Class/TransformerCNN_Masks.ipynb
@@ -901,65 +901,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-
-
-# Function to calculate IoU
-def calculate_iou(gt_mask, pred_mask_sum):
-    intersection = np.logical_and(gt_mask, pred_mask_sum).sum()
-    union = np.logical_or(gt_mask, pred_mask_sum).sum()
-    return intersection / union if union != 0 else 0
-
-# Function to calculate pixel-wise recall
-def calculate_recall(gt_mask, pred_mask_sum):
-    tp = np.logical_and(gt_mask, pred_mask_sum).sum()  # True Positives
-    fn = np.logical_and(gt_mask, ~pred_mask_sum).sum()  # False Negatives
-    return tp / (tp + fn) if (tp + fn) != 0 else 0
-
-# Calculate IoU and recall
-ious = []
-recalls = []
-
-for gt_mask, pred_mask in zip(all_gt_masks, all_pred_masks):
-    # Convert predicted instance masks to a binary mask by summing over the instance dimension
-    pred_mask_sum = np.sum(pred_mask, axis=0) > 0  # Threshold at 0 to get binary mask
-    gt_binary_mask = gt_mask.sum(axis=0) > 0       # Ground truth binary mask
-
-    # Calculate IoU
-    iou = calculate_iou(gt_binary_mask, pred_mask_sum)
-    ious.append(iou)
-
-    # Calculate Recall
-    recall = calculate_recall(gt_binary_mask, pred_mask_sum)
-    recalls.append(recall)
-
-# Print average IoU and Recall
-average_iou = np.mean(ious)
-average_recall = np.mean(recalls)
-print(f"Average IoU: {average_iou}")
-print(f"Average Recall: {average_recall}")
-
-# Optionally, visualize IoU and Recall for a few samples
-for i in range(5):  # Visualize the first 5 images
-    plt.figure(figsize=(12, 5))
-    
-    plt.subplot(1, 3, 1)
-    plt.imshow(all_images[i].squeeze(), cmap='gray')
-    plt.title("Input Image")
-    plt.axis("off")
-    
-    plt.subplot(1, 3, 2)
-    plt.imshow(all_gt_masks[i].sum(axis=0), cmap='gray')
-    plt.title("Ground Truth Mask")
-    plt.axis("off")
-    
-    plt.subplot(1, 3, 3)
-    plt.imshow(np.sum(all_pred_masks[i], axis=0) > 0, cmap='gray')
-    plt.title(f"Predicted Mask\nIoU: {ious[i]:.2f}, Recall: {recalls[i]:.2f}")
-    plt.axis("off")
-    
-    plt.show()
-
-
+    "# Function to calculate IoU\n",
+    "def calculate_iou(gt_mask, pred_mask_sum):\n",
+    "    intersection = np.logical_and(gt_mask, pred_mask_sum).sum()\n",
+    "    union = np.logical_or(gt_mask, pred_mask_sum).sum()\n",
+    "    return intersection / union if union != 0 else 0\n",
+    "\n",
+    "# Function to calculate pixel-wise recall\n",
+    "def calculate_recall(gt_mask, pred_mask_sum):\n",
+    "    tp = np.logical_and(gt_mask, pred_mask_sum).sum()  # True Positives\n",
+    "    fn = np.logical_and(gt_mask, ~pred_mask_sum).sum()  # False Negatives\n",
+    "    return tp / (tp + fn) if (tp + fn) != 0 else 0\n",
+    "\n",
+    "# Calculate IoU and recall\n",
+    "ious = []\n",
+    "recalls = []\n",
+    "\n",
+    "for gt_mask, pred_mask in zip(all_gt_masks, all_pred_masks):\n",
+    "    # Convert predicted instance masks to a binary mask by summing over the instance dimension\n",
+    "    pred_mask_sum = np.sum(pred_mask, axis=2) > -700  # Threshold at 0 to get binary mask\n",
+    "    gt_binary_mask = gt_mask.sum(axis=2)       # Ground truth binary mask\n",
+    "\n",
+    "    # Calculate IoU\n",
+    "    iou = calculate_iou(gt_binary_mask, pred_mask_sum)\n",
+    "    ious.append(iou)\n",
+    "\n",
+    "    # Calculate Recall\n",
+    "    recall = calculate_recall(gt_binary_mask, pred_mask_sum)\n",
+    "    recalls.append(recall)\n",
+    "\n",
+    "# Print average IoU and Recall\n",
+    "average_iou = np.mean(ious)\n",
+    "average_recall = np.mean(recalls)\n",
+    "print(f\"Average IoU: {average_iou}\")\n",
+    "print(f\"Average Recall: {average_recall}\")\n",
+    "\n",
+    "# Optionally, visualize IoU and Recall for a few samples\n",
+    "for i in range(5):  # Visualize the first 5 images\n",
+    "    plt.figure(figsize=(12, 5))\n",
+    "    \n",
+    "    plt.subplot(1, 3, 1)\n",
+    "    plt.imshow(all_images[i].squeeze(), cmap='gray')\n",
+    "    plt.title(\"Input Image\")\n",
+    "    plt.axis(\"off\")\n",
+    "    \n",
+    "    plt.subplot(1, 3, 2)\n",
+    "    plt.imshow(all_gt_masks[i].sum(axis=2), cmap='gray')\n",
+    "    plt.title(\"Ground Truth Mask\")\n",
+    "    plt.axis(\"off\")\n",
+    "    \n",
+    "    plt.subplot(1, 3, 3)\n",
+    "    plt.imshow(np.sum(all_pred_masks[i], axis=2) > 0, cmap='gray')\n",
+    "    plt.title(f\"Predicted Mask\\nIoU: {ious[i]:.2f}, Recall: {recalls[i]:.2f}\")\n",
+    "    plt.axis(\"off\")\n",
+    "    \n",
+    "    plt.show()"
    ]
   }
  ],
